--- a/templates/messenger/room.html
+++ b/templates/messenger/room.html
@@ -1,46 +1,172 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="utf-8"/>
-    <title>Chat Room</title>
-</head>
-<body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br/>
-    <input id="chat-message-input" type="text" size="91"/>
-    <input id="chat-message-submit" type="button" value="Send"/>
-</body>
+{% extends 'messenger/index.html' %}
+{% load static %}
+{% block title %}SD - Chat{% endblock %}
+{% block body %}
+<div id="frame">
+    <div id="sidepanel">
+        <div id="profile">
+            <div class="wrap">
+                <img id="profile-img" src="https://res.cloudinary.com/herodev/image/upload/v1554218695/user.png" class="online" alt=""/>
+                <p>{{ username }}</p>
+                <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
+                <div id="status-options">
+                    <ul>
+                        <li id="status-online" class="active"><span class="status-circle"></span>
+                            <p>Online</p></li>
+                        <li id="status-away"><span class="status-circle"></span>
+                            <p>Away</p></li>
+                        <li id="status-busy"><span class="status-circle"></span>
+                            <p>Busy</p></li>
+                        <li id="status-offline"><span class="status-circle"></span>
+                            <p>Offline</p></li>
+                    </ul>
+                </div>
+                <div id="expanded">
+                    <label for="twitter"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></label>
+                    <input name="twitter" type="text" value="mikeross"/>
+                    <label for="twitter"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></label>
+                    <input name="twitter" type="text" value="ross81"/>
+                    <label for="twitter"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></label>
+                    <input name="twitter" type="text" value="mike.ross"/>
+                </div>
+            </div>
+        </div>
+        <!--<div id="search">
+            <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
+            <input type="text" placeholder="Search contacts..."/>
+        </div>-->
+        <div id="contacts">
+            <ul>
+                <!--<li class="contact">
+                    <div class="wrap">
+                        <span class="contact-status busy"></span>
+                        <img src="http://emilcarlsson.se/assets/louislitt.png" alt=""/>
+                        <div class="meta">
+                            <p class="name">Louis Litt</p>
+                            <p class="preview">You just got LITT up, Mike.</p>
+                        </div>
+                    </div>
+                </li>-->
+                <li class="contact active">
+                    <div class="wrap">
+                        <!--<span class="contact-status online"></span>-->
+                        <img src="https://res.cloudinary.com/herodev/image/upload/v1554218695/user.png" alt=""/>
+                        <div class="meta">
+                            <p class="name">Harvey Specter</p>
+                            <p class="preview"></p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!--<div id="bottom-bar">
+            <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span>
+            </button>
+            <button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>
+        </div>-->
+    </div>
+
+    <div class="content">
+        <div class="contact-profile">
+            <img src="https://res.cloudinary.com/herodev/image/upload/v1554218695/user.png" alt=""/>
+            <p>Harvey Specter</p>
+            <div class="social-media">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="messages">
+            <ul id="chat-log">
+                {% comment %}<li class="sent">
+                    <img src="https://res.cloudinary.com/herodev/image/upload/v1554218695/user.png" alt=""/>
+                    <p>Test.</p>
+                </li>
+                <li class="replies">
+                    <img src="https://res.cloudinary.com/herodev/image/upload/v1554218695/user.png" alt=""/>
+                    <p>Test.</p>
+                </li{% endcomment %}
+            </ul>
+        </div>
+        <div class="message-input">
+            <div class="wrap">
+                <input id="chat-message-input" type="text" placeholder="Digite sua menssagem..."/>
+                <button id="chat-message-submit" class="submit">
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% block js %}<script src="{% static 'reconnecting-websocket.js' %}"></script>{% endblock %}
+
 <script>
     var roomName = {{ room_name_json }};
+    var userName = {{ username }};
 
-    var chatSocket = new WebSocket(
+    var chatSocket = new ReconnectingWebSocket(
         'ws://' + window.location.host +
         '/ws/chat/' + roomName + '/');
 
-    chatSocket.onmessage = function(e) {
-        var data = JSON.parse(e.data);
-        var message = data['message'];
-        document.querySelector('#chat-log').value += (message + '\n');
+    chatSocket.onopen = function (e) {
+        fetchMessages();
     };
 
-    chatSocket.onclose = function(e) {
+    chatSocket.onmessage = function (e) {
+        var data = JSON.parse(e.data);
+        if(data['command'] === 'messages'){
+            for (let i=0; i<data['messages'].length; i++ ){
+                createMessage(data['messages'][i]);
+            }
+        } else if(data['command'] === 'new_message'){
+            createMessage(data['message']);
+        }
+    };
+
+    chatSocket.onclose = function (e) {
         console.error('Chat socket closed unexpectedly');
     };
 
-    document.querySelector('#chat-message-input').focus();
-    document.querySelector('#chat-message-input').onkeyup = function(e) {
+    document.querySelector('#chat-message-input').onkeyup = function (e) {
         if (e.keyCode === 13) {  // enter, return
             document.querySelector('#chat-message-submit').click();
         }
     };
 
-    document.querySelector('#chat-message-submit').onclick = function(e) {
-        var messageInputDom = document.querySelector('#chat-message-input');
+    document.querySelector('#chat-message-submit').onclick = function (e) {
+        var messageInputDom = document.getElementById('chat-message-input');
         var message = messageInputDom.value;
         chatSocket.send(JSON.stringify({
-            'message': message
+            'command': 'new_message',
+            'message': message,
+            'from': userName
         }));
 
         messageInputDom.value = '';
     };
+
+    function fetchMessages(){
+        chatSocket.send(JSON.stringify({'command': 'fetch_messages'}))
+    }
+    
+    function createMessage(data) {
+        var autor = data['autor'];
+        var msgListTag = document.createElement('li');
+        var imgTag = document.createElement('img');
+        var pTag = document.createElement('p');
+        pTag.textContent = data.content;
+        imgTag.src = 'https://res.cloudinary.com/herodev/image/upload/v1554218695/user.png';
+
+        if (autor === userName) {
+            msgListTag.className = 'sent';
+        } else {
+            msgListTag.className = 'replies';
+        }
+        msgListTag.appendChild(imgTag);
+        msgListTag.appendChild(pTag);
+        document.querySelector('#chat-log').appendChild(msgListTag);
+    }
+
 </script>
-</html>
+{% endblock %}
