--- a/templates/messenger/room.html
+++ b/templates/messenger/room.html
@@ -147,7 +147,7 @@
     };
 
     function fetchMessages(){
-        chatSocket.send(JSON.stringify({'command': 'fetch_messages'}))
+        chatSocket.send(JSON.stringify({'command': 'fetch_messages'}));
     }
     
     function createMessage(data) {
